# MITgcm_CS

./: .gitignore
analysis/: analysis.py  convert.py  dashboard.py  datainput.py  failed-groomed.txt  failed.txt  graph.py  jmd95.py  jmd95_coef.py  pyproject.toml  table.tex  utils.py
analysis/matlab/: load_data.m  loadexp.m  plot_all_model_runs.m  plot_model.m
newexp/: newexp.m  runShelfDepth.m  runShelfDepthSpinup.m  setParams.m  setParamsSpinup.m  temptopo.mat  varyIceFront.m  varySaltFlux.m  varySaltFluxWithSlope.m  varySaltWarmCold.m  varyWidth.m
tools/build_options/: hoffman2_ucla
