[project]
name = "analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.8"
dependencies = [
    "astropy>=7.1.0",
    "cmocean>=4.0.3",
    "contourpy==1.2.1",
    "gsw>=3.6.20",
    "ipdb>=0.13.13",
    "matplotlib>=3.10.5",
    "numpy==2.0.1",
    "scikit-learn>=1.7.1",
    "sympy>=1.14.0",
    "tabulate>=0.9.0",
    "tqdm>=4.67.1",
    "xarray>=2025.7.1",
    "xmitgcm>=0.5.2",
]
